k8s/production/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow-production
  labels:
    env: production
    app: taskflow
